--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
+    <% if (htmlWebpackPlugin.files.sprites) { %>
+    <div style="display: none;">
+        <% for (var spriteFileName in htmlWebpackPlugin.files.sprites) { %>
+            <%= htmlWebpackPlugin.files.sprites[spriteFileName] %>
+        <% } %>
+    </div>
+    <% } %>
     <div id="root"></div>
   </body>
 </html>
